--- a/style.css
+++ b/style.css
@@ -1,18 +1,49 @@
+@import url('https://fonts.googleapis.com/css2?family=Balsamiq+Sans:wght@700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Balsamiq+Sans:wght@700&family=Roboto&display=swap');
+
 body{
-    background-color: pink;
+    background-color: #ffcdb2;
     height: 100%;
     width: 100%;
+    overflow-x: hidden;
 }
-
+#controls{
+    /* border: 1px solid red; */
+    text-align: center;
+    margin-top: 4rem;
+    margin-bottom: 6rem;
+}
+h1{
+    font-family: 'Balsamiq Sans', cursive;
+    font-size: 4rem;
+    color: #6d6875;
+}
+#clear{
+    height: 50px;
+    width: 140px;
+    border: none;
+    border-radius:8px;
+    font-family: 'Roboto', sans-serif;
+    font-size: 1rem;
+    color: #e5989b;
+}
+#clear:hover{
+    background-color: #b5838d;
+    color: #ffcdb2;
+}
+#clear:focus{
+    outline: none !important;
+}
 container{
     margin-left: auto;
     margin-right: auto;
     display: grid;
     width: 500px;
     height: 500px;
+    border: 1px solid #6d6875;
 }
 
 .cell{
-    background-color: orange;
-    border:1px solid blue;
+    background-color: #ffcdb2;
+    border:1px solid #b5838d;
 }
